objects/Area_Code__c.object
<CustomObject>
    <description>Used by Customer Operations for call routing purposes</description>
    <fields>
        <fullName>Area_Code__c</fullName>
        <description>Area Code</description>
        <externalId>true</externalId>
        <label>Area Code</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Area_Location__c</fullName>
        <description>Area/Location of Area Code</description>
        <label>Area/Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Note about Area Code</description>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Number__c</fullName>
        <description>Number associated to Region for inContact call routing based on Area Code</description>
        <label>Region Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <description>Skill (group) for Area Code for call routing</description>
        <label>Skill</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Great East</fullName>
                </value>
                <value>
                    <fullName>Great West</fullName>
                </value>
                <value>
                    <fullName>South Central</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Unknown Domestic</fullName>
                </value>
                <value>
                    <fullName>Unknown International</fullName>
                </value>
                <value>
                    <fullName>Upper Midwest</fullName>
                </value>
                <value>
                    <fullName>West Coast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Area Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Area_Code__c</columns>
        <columns>Area_Location__c</columns>
        <columns>Skill__c</columns>
        <columns>Note__c</columns>
        <columns>Region_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{000}</displayFormat>
        <label>Area Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Area Codes</pluralLabel>
    <recordTypes>
        <fullName>Customer_Ops_Area_Code</fullName>
        <active>true</active>
        <description>Used by Customer Ops for call routing purposes</description>
        <label>Customer Ops Area Code</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>